并查集、单调栈、dp遍历顺序

--- a/算法技巧及模板总结.md
+++ b/算法技巧及模板总结.md
@@ -583,7 +583,13 @@ void solve() {
 
 ###  记忆化搜索翻译成动态规划注意事项(步骤)
 
-以70.爬楼梯为例。首先要确保记忆化搜索跑出来的代码是正确且不超时的，然后第一点先关注的应该是递归的边界`if(i<=1)`那么i为1的时候就退出递归了，那么最后一个状态是i=2，这个时候再看递推关系式`res = dfs(dfs, i-1)+dfs(dfs, i-2);`我们发现i-2最小也是0，是不会对数组越界的，所以不需要改变递推关系式，如果会越界，就根据情况改变递推式，可以参考打家劫舍那一题。对于如果修改递推关系式的话，跟nums数组没关系，之和你的dp数组有关系，举个例子打家劫舍中`dfs(dfs, i) = max(dfs(dfs, i-1), dfs(dfs, i-2)+nums[i]);`改变递推式后为`dfs(dfs, i+2) = max(dfs(dfs, i+1), dfs(dfs, i)+nums[i]);`。再然后就是将递推变成循环，我觉得容易出现问题的地方在初始值和边界值上。初始值的话，可以看记忆化搜索的递归边界前的第一个状态，而结束边界的话我觉得要根据题意来判断，比如数组边界之类的吧
+以70.爬楼梯为例。首先要确保记忆化搜索跑出来的代码是正确且不超时的，然后第一点先关注的应该是递归的边界`if(i<=1)`那么i为1的时候就退出递归了，那么最后一个状态是i=2，这个时候再看递推关系式`res = dfs(dfs, i-1)+dfs(dfs, i-2);`我们发现i-2最小也是0，是不会对数组越界的，所以不需要改变递推关系式，如果会越界，就根据情况改变递推式，可以参考打家劫舍那一题。对于如果修改递推关系式的话，跟nums数组没关系，之和你的dp数组有关系，举个例子打家劫舍中`dfs(dfs, i) = max(dfs(dfs, i-1), dfs(dfs, i-2)+nums[i]);`改变递推式后为`dfs(dfs, i+2) = max(dfs(dfs, i+1), dfs(dfs, i)+nums[i]);`。再然后就是将递推变成循环，我觉得容易出现问题的地方在初始值和边界值上。初始值的话，可以看记忆化搜索的递归边界前的第一个状态，而结束边界的话我觉得要根据题意来判断，比如数组边界之类的吧。剪枝操作一定要在边界返回的条件之前！
+
+
+
+###  如何理解记忆化搜索转化成dp的遍历顺序？
+
+这一点主要看递推式是什么样的，假如递推式形如`dp[i][j] = dp[i+1][j]...`的式子，我们可以观察到这个i是由后一个状态而来，所以我们遍历i的时候应该从后往前遍历，而对于j的话就没有什么特定的要求，它正向或者逆向遍历都是可以的
 
 
 
@@ -845,6 +851,88 @@ public:
 
 ###  树型dp
 
+####  树的直径
+
+这种题型也算是困扰我许久的了，在牛客上遇到的比较多，经常看到题解写的树上dfs，来历应该就是在这里了，原来灵神归到了树型dp上了，这里也介绍了`dfs(int x, int fa)`的由来，以及为什么要有个`int fa`这个参数。这里拿2246.相邻字符不同的最长路径举例，为什么这一题可以算是树的直径类型题目呢？虽然看上去是求符合条件的点的个数，其实也就是符合条件的边的个数+1。示例代码如下：
+
+有向图写法：
+
+```cpp
+class Solution {
+public:
+    int longestPath(vector<int>& parent, string s) {
+        int n = s.size();
+        vector<vector<int>> g(n);
+
+        //建图 表示parent[i]能够到达i 从1开始遍历因为i=0已经是根节点，没有其它点指向它
+        for(int i = 1; i < n; i++) g[parent[i]].push_back(i);
+
+        int ans = 0;
+        auto dfs = [&](auto&& dfs, int x) -> int {
+            int maxLen = 0;
+            for(auto y : g[x]) {
+                int len = dfs(dfs, y)+1;
+                
+                //确保相邻不相等
+                if(s[y] != s[x]) {
+                    ans = max(ans, maxLen+len);	//在遍历的过程中维护最大值
+                    maxLen = max(maxLen, len);
+                }
+            }
+            return maxLen;
+        };
+        dfs(dfs, 0);
+        return ans+1;
+    }
+};
+```
+
+
+
+无向图写法：
+
+```cpp
+class Solution {
+public:
+    int longestPath(vector<int>& parent, string s) {
+        int n = s.size();
+        vector<vector<int>> g(n);
+
+        //建图 表示parent[i]能够到达i 从1开始遍历因为i=0已经是根节点，没有其它点指向它
+        for(int i = 1; i < n; i++) {
+            g[parent[i]].push_back(i);
+            g[i].push_back(parent[i]);
+        }
+
+        int ans = 0;
+        auto dfs = [&](auto&& dfs, int x, int fa) -> int {
+            int maxLen = 0;
+            for(auto y : g[x]) {
+                if(y == fa) continue;
+                int len = dfs(dfs, y, x)+1;
+                
+                //确保相邻不相等
+                if(s[y] != s[x]) {
+                    ans = max(ans, maxLen+len);
+                    maxLen = max(maxLen, len);
+                }
+            }
+            return maxLen;  //为空或者相邻相等都返回0
+        };
+        dfs(dfs, 0, -1);
+        return ans+1;
+    }
+};
+```
+
+在无向图的写法中，就遇到了这个在牛客中经常遇到的fa这个dfs参数，我的理解是这个图先是建的无向图，然后在遍历的时候如果当前节点和fa相同的话其实是重复遍历的，或者说其实是不能到达的，所以需要这一步。这一题 写完题解也是才明白能和这个字符串s构建起联系了，就是在判断是否相邻用到了一下，这个s其实感觉有点类似于hash的作用了
+
+
+
+##  最大子数组和
+
+ Kadane 算法：`dp[i] = max(dp[i-1], 0)+nums[i]`
+
 
 
 
@@ -907,6 +995,150 @@ int target = 3487568927346, ans = 0;
 string s = to_string(target);
 for(char c : s) ans += c-'0';
 ```
+
+
+
+##  位运算
+
+###  lowbit模板---取出x最低位的1和0
+
+```cpp
+//取出最低位1
+int lowbit = x&-x;	
+
+//取出最低位0
+int t = ~x;	//先对x取反
+int lowbit = t&-t;
+```
+
+
+
+###  **将n转化成二进制和的形式存在数组中**
+
+```cpp
+vector<int> power;
+int lowbit;
+while(n) {
+    lowbit = n&(-n);//-n也就是n^1
+    power.push_back(lowbit);
+    n ^= lowbit;//减去最低位
+    //n -= lowbit;
+}
+```
+
+
+
+###  快速求x * 2^i
+
+求2的i次幂可以用左移来解决，当然右移就相当于除法
+
+```cpp
+void solve() {
+    cout << (5<<3) << "\n";	//求5 * 2^3
+    cout << (40>>3) << "\n";	//求40/2^3
+}
+```
+
+
+
+
+
+
+
+##  gcd和lcm
+
+```cpp
+int gcd(int a, int b) {
+    return b == 0 ? a : gcd(b, a%b);
+}
+
+a * b = gcd(a, b)*lcm(a, b)
+int lcm(int a, int b) {
+    return a/gcd(a, b)*b;
+}
+
+void solve() {
+    cout << gcd(15, 10) << "\n";	//5
+    cout << lcm(15, 10) << "\n";	//30
+}
+```
+
+
+
+##  单调栈
+
+大致模板，以739.日常温度为例
+
+从右往左、栈中记录`下一个更大(或小)的元素`
+
+```cpp
+class Solution {
+public:
+    vector<int> dailyTemperatures(vector<int>& temperatures) {
+        int n = temperatures.size();
+        vector<int> ans(n);
+        stack<int> st;	//下一个更大的元素
+        for(int i = n-1; i >= 0; i--) {
+            while(!st.empty() && temperatures[st.top()] <= temperatures[i]) st.pop();
+            if(!st.empty()) ans[i] = st.top()-i;
+            st.push(i);
+        }
+        return ans;
+    }
+};
+```
+
+
+
+从左往右、栈中记录`还没算出下一个更大(或更小)元素的下标`
+
+```cpp
+class Solution {
+public:
+    vector<int> dailyTemperatures(vector<int>& temperatures) {
+        int n = temperatures.size();
+        vector<int> ans(n);
+        stack<int> st;  //还未找到下一个更大元素的下标
+        for(int i = 0; i < n; i++) {
+            int t = temperatures[i];
+            while(!st.empty() && t > temperatures[st.top()]) {
+                int j = st.top();
+                st.pop();
+                ans[j] = i-j;
+            }
+            st.push(i);
+        }
+        return ans;
+    }
+};
+```
+
+首先得判断出我要找当前位置后面的小于还是大于这个值的第一个数，可以想象成一行高楼，从左往右看，高的楼会挡住后面低的楼，所以这是一个找下一个大于当前高度的值。一般也就只有两种类型，假设当前值为nums[i]：1、找第一个大于nums[i]的值；2、找第一个小于nums[i]的值
+
+
+
+##  并查集
+
+```cpp
+vector<int> uf(n);
+
+//init
+iota(uf.begin(), uf.end(), 0);
+
+//find
+auto find = [&](auto&& find, int x) -> int {
+    return x == uf[x] ? x : uf[x] = find(find, uf[x]);
+};
+
+//union
+for(auto ... : ...) {
+    if(...) {
+        uf[find(find, ...)] = find(find, ...);
+    }
+}
+```
+
+
 
 
 
