--- a/十月刷题笔记.md
+++ b/十月刷题笔记.md
@@ -1653,3 +1653,192 @@ public:
 };
 ```
 
+本质就是最大子数组和
+
+
+
+##  962.最大宽度坡(单调栈)
+
+```cpp
+class Solution {
+public:
+    int maxWidthRamp(vector<int>& nums) {
+        stack<int> st;
+        int n = nums.size();
+        for(int i = 0; i < n; i++) {
+            if(st.empty() || nums[st.top()] > nums[i]) st.push(i);
+        }
+        int ans = 0;
+        for(int i = n-1; i >= 0; i--) {
+            while(!st.empty() && nums[st.top()] <= nums[i]) {
+                int pos = st.top();
+                st.pop();
+                ans = max(ans, i-pos);
+            }
+        }
+        return ans;
+    }
+};
+```
+
+主要是需要学会这一题分析问题的能力，然后发现这个题用单调栈写。要求出这个max(j-i)，那么我们就需要这个i越小越好，j越大越好。然后就是这里需要维护一个严格单调递减的栈，这个栈中存放的是对应元素的下标，因为求的值就是和下标相关，所以就是存入下标。可是为什么要维护一个单调递减的栈还是不明白。。。
+
+
+
+##  2304.网格中的最小路径代价(记忆化搜索、dp)
+
+记忆化搜索：
+
+```cpp
+class Solution {
+public:
+    int minPathCost(vector<vector<int>>& grid, vector<vector<int>>& moveCost) {
+        int m = grid.size(), n = grid[0].size();
+        vector<vector<int>> memo(m, vector<int>(n, -1));
+        auto dfs = [&](auto&& dfs, int i, int j) -> int {
+            if(i == m-1) return grid[i][j];
+            int& res = memo[i][j];
+            if(res != -1) return res;
+            res = INT_MAX;
+            for(int k = 0; k < n; k++) {
+                res = min(res, dfs(dfs, i+1, k)+moveCost[grid[i][j]][k]);
+            }
+            return res = res+grid[i][j];
+        };
+
+        int ans = INT_MAX;
+        for(int j = 0; j < n; j++) ans = min(ans, dfs(dfs, 0, j));
+        return ans;
+    }
+};
+```
+
+
+
+dp：
+
+```cpp
+class Solution {
+public:
+    int minPathCost(vector<vector<int>>& grid, vector<vector<int>>& moveCost) {
+        int m = grid.size(), n = grid[0].size();
+
+        vector<vector<int>> dp(m, vector<int>(n, INT_MAX));
+        dp[m-1] = grid[m-1];
+        for(int i = m-2; i >= 0; i--) {
+            for(int j = 0; j < n; j++) {
+                for(int k = 0; k < n; k++) {
+                    dp[i][j] = min(dp[i][j], dp[i+1][k]+moveCost[grid[i][j]][k]);
+                }
+                dp[i][j] += grid[i][j];
+            }
+        }
+        
+        return *min_element(dp[0].begin(), dp[0].end());
+    }
+};
+```
+
+
+
+算是经典的一个网格的记忆化搜索题目了，这一题的分析子问题很容易想出来，很清晰，只不过稍有一点的难点就在于这么求这个最小代价上，这个下标一定要用的恰到好处！
+
+
+
+##  2915.和为目标值的最长子序列长度(记忆化dfs、dp、01背包)
+
+记忆化搜索：
+
+```cpp
+class Solution {
+public:
+    int lengthOfLongestSubsequence(vector<int>& nums, int target) {
+        int n = nums.size();
+        vector<vector<int>> memo(n, vector<int>(target+1, -1));
+        auto dfs = [&](auto&& dfs, int i, int j) -> int {
+            if(i < 0) return j == 0 ? 0 : INT_MIN;
+            int& res = memo[i][j];
+            if(res != -1) return res;
+            if(j < nums[i]) return res = dfs(dfs, i-1, j);
+            return res = max(dfs(dfs, i-1, j), dfs(dfs, i-1, j-nums[i])+1);
+        };
+        int ans = dfs(dfs, n-1, target);
+        return ans < 0 ? -1 : ans;
+    }
+};
+```
+
+
+
+dp：
+
+```cpp
+class Solution {
+public:
+    int lengthOfLongestSubsequence(vector<int>& nums, int target) {
+        int n = nums.size();
+        vector<vector<int>> dp(n+1, vector<int>(target+1));
+        for(int j = 1; j <= target; j++) dp[0][j] = INT_MIN;	//没有达到target
+        for(int i = 0; i < n; i++) {
+            for(int j = 0; j <= target; j++) {
+                if(j < nums[i]) dp[i+1][j] = dp[i][j];
+                else dp[i+1][j] = max(dp[i][j], dp[i][j-nums[i]]+1);
+            }
+        }
+        return dp[n][target] <= 0 ? -1 : dp[n][target];
+    }
+};
+```
+
+记忆化还是大部分能写出来了，但是还是不是很熟练，没有想到这是一个01背包！所以大致的01背包模板是基本不变的！然后就是转化成dp后错在了初始化上，自己写的时候把dp全部初始化成了INT_MIN，后面想其实是不对的，只有下标为0且target还大于0的情况下才都初始化成INT_MIN
+
+
+
+##  115.不同的子序列(记忆化dfs)
+
+记忆化搜索：
+
+```cpp
+class Solution {
+public:
+    int numDistinct(string s, string t) {
+        int n = s.size(), m = t.size(), mod = 1e9+7;
+        vector<vector<int>> memo(n, vector<int>(m, -1));
+        auto dfs = [&](auto&& dfs, int i, int j) -> int {
+            if(j < 0) return 1; //j=-1表示是符合t是s的一个子序列的情况
+            if(i < 0) return 0; //已经讨论过j，所以剩下的情况直接返回0
+            int& res = memo[i][j];
+            if(res != -1) return res;
+            if(s[i] == t[j]) return res = (dfs(dfs, i-1, j)+dfs(dfs, i-1, j-1))%mod;
+            return dfs(dfs, i-1, j);
+        };
+        return dfs(dfs, n-1, m-1);
+    }
+};
+```
+
+
+
+dp：
+
+```cpp
+class Solution {
+public:
+    int numDistinct(string s, string t) {
+        int n = s.size(), m = t.size(), mod = 1e9+7;
+
+        vector<vector<int>> dp(n+1, vector<int>(m+1));
+        for(int i = 0; i <= n; i++) dp[i][0] = 1;
+        for(int i = 0; i < n; i++) {
+            for(int j = 0; j < m; j++) {
+                if(s[i] == t[j]) dp[i+1][j+1] = (dp[i][j+1]+dp[i][j])%mod;
+                else dp[i+1][j+1] = dp[i][j+1];
+            }
+        }
+        return dp[n][m];
+    }
+};
+```
+
+这一题其实是属于最长公共子序列的题目里头，但是和前面几题做的又有一点不一样，前面做过的几个题都是什么删除多少次数达到相等，最后求的都是操作数之类的结果，而这一题不同，让我们求的是s中有多少t这样的子序列，但是一看完题解又好像感觉并没有想象的那么难。其实关键还是在分析子问题上面，当`s[i] == t[j]`的时候问题就变成了从s[i-1]和t[j-1]的符合条件的个数+s[i-1]和t[j]的符合条件的个数，关键是在于理解j不动的情况下，因为s[i]前面可能还会有和t[j]匹配的，然后就是一定是加法，可以理解成两个独立的事件吧，然后用加法来计算
+
