--- a/十月刷题笔记.md
+++ b/十月刷题笔记.md
@@ -1842,3 +1842,64 @@ public:
 
 这一题其实是属于最长公共子序列的题目里头，但是和前面几题做的又有一点不一样，前面做过的几个题都是什么删除多少次数达到相等，最后求的都是操作数之类的结果，而这一题不同，让我们求的是s中有多少t这样的子序列，但是一看完题解又好像感觉并没有想象的那么难。其实关键还是在分析子问题上面，当`s[i] == t[j]`的时候问题就变成了从s[i-1]和t[j-1]的符合条件的个数+s[i-1]和t[j]的符合条件的个数，关键是在于理解j不动的情况下，因为s[i]前面可能还会有和t[j]匹配的，然后就是一定是加法，可以理解成两个独立的事件吧，然后用加法来计算
 
+
+
+##  1129.颜色交替的最短路径(bfs)
+
+```cpp
+class Solution {
+public:
+    vector<int> shortestAlternatingPaths(int n, vector<vector<int>>& redEdges, vector<vector<int>>& blueEdges) {
+        //第一个维度是 红/蓝边
+        vector<vector<vector<int>>> adj(2, vector<vector<int>>(n));
+        for(auto& e : redEdges) adj[0][e[0]].push_back(e[1]);
+        for(auto& e : blueEdges) adj[1][e[0]].push_back(e[1]);
+        queue<pair<int, int>> q;    //<当前点，入边的颜色>
+        q.push({0, 0});
+        q.push({0, 1});
+        bool vis[n][2];
+        memset(vis, false, sizeof(vis));
+        vector<int> ans(n, -1);
+        int d = 0;
+        while(!q.empty()) {
+            //bfs的每一轮到起点的举例都是d
+            for(int k = q.size(); k > 0; k--) {
+                auto [x, y] = q.front();    //这里不能用引用，因为后面 y ^= 1
+                q.pop();
+                if(ans[x] == -1) ans[x] = d;
+                vis[x][y] = true;
+                y ^= 1; //下一条边要换颜色
+                for(int& v : adj[y][x]) {
+                    if(!vis[v][y]) q.push({v, y});
+                }
+            }
+            d++;	//下一轮都是这个d
+        }
+        return ans;
+    }
+};
+```
+
+图论中的最短路径，一定最优先想到的就是bfs了，多学学吧，唉，发现现在会的dfs和bfs都是最基础的。题干中比平常遇到的题中多了个交替颜色的限定，这样就需要多一个维度来维护这个交替的情况
+
+
+
+##  1557.可以到达所有点的最少点数目(找入度为0的点)
+
+```cpp
+class Solution {
+public:
+    vector<int> findSmallestSetOfVertices(int n, vector<vector<int>>& edges) {
+        vector<int> ans;
+        unordered_set<int> ust;
+        for(auto& e : edges) ust.insert(e[1]);
+        for(int i = 0; i < n; i++) {
+            if(ust.find(i) == ust.end()) ans.push_back(i);
+        }
+        return ans;
+    }
+};
+```
+
+少见的题目，积累一下吧，就是这个给出的edge数组，虽然表示e[0]对e[1]有一条有向边，但是在这一题中还有一种表示，就是出度点和入度点，所以这一题我们只需要遍历edge数组统计到哈希集合中，然后再遍历点，看有多少不是在集合中的，不在集合中就表明这是一个入度为0的点
+
