--- a/算法技巧及模板总结.md
+++ b/算法技巧及模板总结.md
@@ -157,7 +157,7 @@ public:
 ##  dfs和bfs
 
 力扣平台有时候给你的就是一个邻接表，这意味着它直接帮你初始化邻接表了就只需要管如何搜索就行了，但是对于其它的平台就都需要自己初始化邻接表，下面是初始化邻接表的代码示范：
-表示x点和y点有边的邻接表
+表示x点和y点有边的`邻接表`
 
 无权：
 
@@ -184,6 +184,20 @@ for(auto& r : roads) {
 
 
 
+邻接矩阵初始化：
+
+```cpp
+vector<vector<int>> adj(n, vector<int>(n, INT_MAX/2));
+//邻接矩阵初始化
+for(auto& t : times) {
+    adj[t[0]-1][t[1]-1] = t[2];
+}
+```
+
+邻接矩阵adj[i] [j]表示i到j有一条权值为t[2]的有向边
+
+
+
 
 
 除此之外，有时候也可以初始化一个二维矩阵，比如g[i] [j] = 1表示点i和j有关系，这样的情况就不需要像上面的操作了，就直接搜索这个二维矩阵就行了
@@ -203,6 +217,239 @@ function<int(int)> dfs = [&](int i) -> int{
     return sz;
 };
 ```
+
+
+
+
+
+###  求最短路
+
+####  朴素Dijkstra---适用于稠密图
+
+以743.网络延迟事件为例
+
+```cpp
+class Solution {
+public:
+    int networkDelayTime(vector<vector<int>>& times, int n, int k) {
+        vector<vector<int>> adj(n, vector<int>(n, INT_MAX/2));
+        //邻接矩阵初始化
+        for(auto& t : times) {
+            adj[t[0]-1][t[1]-1] = t[2];
+        }
+        vector<int> dis(n, INT_MAX/2), vis(n, false);
+        dis[k-1] = 0;   //从下标k-1为起点
+        while(true) {
+            int x = -1;
+            for(int i = 0; i < n; i++) {
+                //先找未被访问的点 再从未访问的点中找距离最小的点下标
+                if(!vis[i] && (x < 0 || dis[i] < dis[x])) x = i;
+            }
+
+            //都已经访问过了 直接返回最大值 都访问过了 不可能出现INT_MAX/2
+            if(x < 0) return ranges::max(dis);
+
+            //没有边到未访问的点x
+            if(dis[x] == INT_MAX/2) return -1;
+
+            vis[x] = true;	//表示已访问
+            
+            //挨个求其临界点的最短路径
+            for(int y = 0; y < n; y++) {
+                dis[y] = min(dis[y], dis[x]+adj[x][y]);
+            }
+        }
+    }
+};
+```
+
+
+
+####  堆优化Dijkstra---适用于稀疏图
+
+```cpp
+class Solution {
+public:
+    int networkDelayTime(vector<vector<int>>& times, int n, int k) {
+        vector<vector<pair<int, int>>> adj(n);
+        //这里用邻接表了 不再是邻接矩阵了
+        for(auto& t : times) adj[t[0]-1].emplace_back(t[1]-1, t[2]);
+        vector<int> dis(n, INT_MAX);
+        dis[k-1] = 0;	//根据题意 从哪开始就是dis[...]=0
+        //堆的定义一定要正确 <dis[k], k>
+        priority_queue<pair<int, int>, vector<pair<int, int>>, greater<>> pq;
+        pq.emplace(0, k-1);
+        while(!pq.empty()) {
+            auto [dx, x] = pq.top();
+            pq.pop();
+
+            //之前出堆过 因为第二次出堆的dis一定比第一次出堆的dis大
+            if(dx > dis[x]) continue;
+
+            //更新最短路径
+            for(auto& [y, d] : adj[x]) {
+                int new_dis = dx+d;
+                if(new_dis < dis[y]) {
+                    dis[y] = new_dis;   //更新x的邻居的最短路
+                    pq.emplace(new_dis, y);
+                }
+            }
+        }
+        int mx = ranges::max(dis);
+        return mx < INT_MAX ? mx : -1;
+    }
+};
+```
+
+
+
+####  Floyd求最短路
+
+以1334.阈值距离内邻居最少的城市
+
+记忆化搜索：
+
+```cpp
+class Solution {
+public:
+    int findTheCity(int n, vector<vector<int>>& edges, int distanceThreshold) {
+        //创建邻接矩阵
+        vector<vector<int>> adj(n, vector<int>(n, INT_MAX/2));
+        for(auto& e : edges) {
+            adj[e[0]][e[1]] = e[2];
+            adj[e[1]][e[0]] = e[2];
+        }
+
+        // 记忆化搜索
+        vector<vector<vector<int>>> memo(n, vector<vector<int>>(n, vector<int>(n, -1)));
+        auto dfs = [&](auto&& dfs, int k, int i, int j) -> int {
+            if(k < 0) return adj[i][j];
+            int& res = memo[i][j][k];
+            if(res != -1) return res;
+            return res = min(dfs(dfs, k-1, i, j), dfs(dfs, k-1, i, k)+dfs(dfs, k-1, k, j));
+        };
+
+        int ans = 0, mn = n;
+        for(int i = 0; i < n; i++) {
+            int cnt = 0;
+            for(int j = 0; j < n; j++) {
+                //记忆化搜索
+                if(j != i && dfs(dfs, n-1, i, j) <= distanceThreshold) cnt++;
+            }
+            if(cnt <= mn) {
+                mn = cnt;
+                ans = i;
+            }
+        }
+        return ans;
+    }
+};
+```
+
+
+
+递推：
+
+```cpp
+class Solution {
+public:
+    int findTheCity(int n, vector<vector<int>>& edges, int distanceThreshold) {
+        //创建邻接矩阵
+        vector<vector<int>> adj(n, vector<int>(n, INT_MAX/2));
+        for(auto& e : edges) {
+            adj[e[0]][e[1]] = e[2];
+            adj[e[1]][e[0]] = e[2];
+        }
+
+        vector<vector<vector<int>>> dp(n+1, vector<vector<int>>(n, vector<int>(n, 0)));
+        dp[0] = adj;
+        for(int k = 0; k < n; k++) {
+            for(int i = 0; i < n; i++) {
+                for(int j = 0; j < n; j++) {
+                    dp[k+1][i][j] = min(dp[k][i][j], dp[k][i][k]+dp[k][k][j]);
+                }
+            }
+        }
+
+        int ans = 0, mn = n;
+        for(int i = 0; i < n; i++) {
+            int cnt = 0;
+            for(int j = 0; j < n; j++) {
+                //递推
+                if(j != i && dp[n][i][j] <= distanceThreshold) cnt++;
+            }
+            if(cnt <= mn) {
+                mn = cnt;
+                ans = i;
+            }
+        }
+        return ans;
+    }
+};
+```
+
+Floyd主要是从dfs开始，而Dijkstra是类似于从queue开始，感觉Floyd更难理解一点。首先得理解灵神给出的递推关系式：
+$$
+dfs(k,i,j)=min(dfs(k−1,i,j),dfs(k−1,i,k)+dfs(k−1,k,j))
+$$
+首先这个`dfs(k, i, j)`定义成  表示从 i 到 j 的最短路长度，并且这条最短路的中间节点编号都 ≤*k*。注意中间节点不包含 *i* 和 *j*。 不选k好理解，直接递归到上一个状态`dfs(dfs, k-1, i, j)`。主要是需要理解选的意思：选的话就分解成了从i到k-1和k-1到j的最短路问题了，这两个子问题的编号都不包含k，所以第一个参数都变成了k-1。最终递归退出的边界就是*k<0*的状态。
+
+
+
+####  01bfs
+
+这个是Dijkstra的简化版本，需要发现边权只为0和1的特点，这样就可以用01bfs来解决，利用deque双端队列代替最小堆来解决最短路的问题。
+
+以3286.穿越网格图的安全路径为例
+
+```cpp
+class Solution {
+public:
+    bool findSafeWalk(vector<vector<int>>& grid, int health) {
+        int m = grid.size(), n = grid[0].size();
+        int dirs[][2] = {{0, -1}, {-1, 0}, {0, 1}, {1, 0}};
+        vector<vector<int>> dis(m, vector<int>(n, INT_MAX));
+        dis[0][0] = grid[0][0];
+        deque<pair<int, int>> dq;
+        dq.emplace_front(0, 0);
+        while(!dq.empty()) {
+            auto [x, y] = dq.front();
+            dq.pop_front();
+            for(auto& dir : dirs) {
+                int dx = x+dir[0], dy = y+dir[1];
+                if(dx >= 0 && dx < m && dy >= 0 && dy < n) {
+                    int new_dis = dis[x][y]+grid[dx][dy];
+                    if(new_dis < dis[dx][dy]) {
+                        dis[dx][dy] = new_dis;
+                        //为0入队首 为1入队尾
+                        grid[dx][dy] == 0 ? dq.emplace_front(dx, dy) : dq.emplace_back(dx, dy);
+                    }
+                }
+            }
+        }
+        return dis[m-1][n-1] < health;
+
+    }
+};
+```
+
+整体步骤和bfs很像，只不过是多了一个dis数组来维护最短路径，在这一题中如果最短路径(对应这里的最小消耗)是小于health的表明是能都到达最右下角的
+
+
+
+
+
+####  判断稀疏图和稠密图
+
+点的个数的平方远大于边的个数，那么这个就是稀疏图，如果点的个数的平方接近边的个数，那么这个就是一个稠密图。
+
+
+
+####  Dijkstra和Floyd的比较
+
+个人觉得Floyd更适合用在稠密图上，看了几个用Floyd解的题目，它们都是用邻接矩阵初始化的，时间复杂度是n^3，是基于记忆化搜索和递推的一个求最短路问题，当查询比较多的时候通常就用Floyd
+
+Dijkstra是求单源最短路径的方法，是基于队列(01bfs用双端队列，堆优化用堆)实现的求最短路的方法，这里面通常需要定义一个dis数组。时间复杂度是log级别的，添加边比较多的时候通常用Dijkstra。
 
 
 
@@ -1173,3 +1420,27 @@ for(auto ... : ...) {
 运算优先级：与运算要比或运算的优先级高
 
 写函数的时候，或者传入数组的时候最好加上引用，今天也是遇到了一个因为没有为数组加上引用而导致爆内存的问题了，在调用函数的时候如果参数是数组，你不写引用的话那么会copy一份那个数组，所以这会耗费一定的空间。
+
+
+
+###  move函数的使用
+
+```cpp
+class Solution {
+public:
+    long long maxEnergyBoost(vector<int>& a, vector<int>& b) {
+        int n = a.size();   //一定要在move函数之前
+        vector<int> c[2] = {move(a), move(b)};
+        vector<vector<long long>> memo(n, vector<long long>(2, -1));
+        auto dfs = [&](auto&& dfs, int i, int j) -> long long {
+            if(i < 0) return 0;
+            long long& res = memo[i][j];
+            if(res != -1) return res;
+            return res = max(dfs(dfs, i-1, j), dfs(dfs, i-2, j^1))+c[j][i];
+        };
+        return max(dfs(dfs, n-1, 0), dfs(dfs, n-1, 1));
+    }
+};
+```
+
+这是一道状态机dp题，但是遇到的错误点在move函数的使用上，我自己写的时候`int n = a.size()`写在了move函数的下一行，结果导致程序怎么跑都输出0，问题就是在move函数上，调用move函数就相当于全部放到这个c二维数组中了，我试了一下如果要在move函数之后正确初始化n的话应该写成`int n = c[0].size()`
