力扣周赛复盘

--- a/练习赛合集.md
+++ b/练习赛合集.md
@@ -996,6 +996,173 @@ public:
 
 
 
+####  3316.从原字符串里进行删除操作的最多次数(记忆化搜索)
+
+```cpp
+class Solution {
+public:
+    int maxRemovals(string source, string pattern, vector<int>& targetIndices) {
+        set<int> st(targetIndices.begin(), targetIndices.end());
+        int n = source.size(), m = pattern.size();
+        vector<vector<int>> memo(n, vector<int>(m+1, -1));
+        auto dfs = [&](auto&& dfs, int i, int j) -> int {
+            if(i < j) return INT_MIN;
+            if(i < 0) return 0;
+            int& res = memo[i][j+1];
+            if(res != -1) return res;
+            res = dfs(dfs, i-1, j)+st.count(i);
+            if(j >= 0 && source[i] == pattern[j]) res = max(res, dfs(dfs, i-1, j-1));
+            return res;
+        };
+        return dfs(dfs, n-1, m-1);
+    }
+};
+```
+
+能想到是记忆化搜索，但是想不出来怎么写，这题类型归于最长公共子序列(lcs)，于以前有点不同的是，这里j需要注意防止溢出操作，主要思想：能删先删，不符合情况会回溯回来，然后就是如果是能删的下边它用了一个哈希set来预处理，可以达到o1的复杂度查询这个下标
+
+
+
+###  周赛419
+
+####  3319.第k大的完美二叉子树的大小(dfs)
+
+```cpp
+class Solution {
+public:
+    int kthLargestPerfectSubtree(TreeNode* root, int k) {
+        vector<int> t;
+        auto dfs = [&](auto&& dfs, TreeNode* node) -> int {
+            if(node == nullptr) return 0;
+            int lheight = dfs(dfs, node->left);
+            int rheight = dfs(dfs, node->right);
+            //比喻成病毒 一个不符合条件就返回给父亲 所以-1就代表不是完美二叉树的意思
+            if(lheight < 0 || rheight < 0 || lheight != rheight) return -1;
+            t.emplace_back(lheight+1);  //符合完美二叉树的条件了 然后将高度存入数组t
+            return lheight+1;   //返回rheight+1也一样，因为完美二叉树左右子树的高度都是相等的
+        };
+        dfs(dfs, root);
+        if(k > t.size()) return -1;
+        sort(t.rbegin(), t.rend());
+        return (1<<t[k-1])-1;   //位运算快速求二次幂
+    }
+};
+```
+
+首先是完美二叉树的定义在比赛的时候没有搞清楚，这里换一种思维来解释一下：其实就是左右子树的高度都相等，所以这其实是求二叉树高度的一个变题，那么光靠左右子树高度来判断其实是不对的，如果左右子树高度相等了，但是其中有一个子树不是完美二叉树，那么这个树其实也不是完美二叉树，这里就对应的`if(lheight < 0 || rheight < 0 || lheight != rheight) return -1;`，就这么一行解决了这个完美二叉树的判断问题，如果当前子树不是一个完美二叉树，那么他就类似于病毒一样一直往父亲去延申。然后就是符合完美二叉树的意思了，就将这个子树高度返回上去并存入数组t。还有要学习一点的就是这个快速求x * 2^i的方法：`(x<<i)`
+
+
+
+####  3320.统计能获胜的出招序列(记忆化搜索)
+
+```cpp
+class Solution {
+public:
+    int countWinningSequences(string s) {
+        int mod = 1e9+7;
+        unordered_map<char, int> mp;
+        // 0 < 1 < 2 < 0 预处理将字符对应了数字 便于后面替代if else
+        mp['F'] = 0, mp['W'] = 1, mp['E'] = 2;  
+        int n = s.size();
+
+        vector<vector<array<int, 3>>> memo(n, vector<array<int, 3>>(2*n+1, {-1, -1, -1}));
+        auto dfs = [&](auto&& dfs, int i, int j, int pre) -> int {
+            if(i+j < 0) return 0;   //必败直接返回 剪枝
+            if(i < 0) return 1; //所有宠物用完了
+            int& res = memo[i][j+n][pre];
+            if(res != -1) return res;
+            res = 0;
+            for(int k = 0; k < 3; k++) {
+                //相邻不能用同种生物 最后一个先特判
+                if(i == n-1 || k != pre) {
+                    //直接替代了大量的if else 0代表平局 1代表获胜 2代表失败
+                    int score = (k-mp[s[i]]+3)%3;   
+                    if(score == 2) score = -1;  //特判2，让分数置为-1
+                    res = (res+dfs(dfs, i-1, j+score, k))%mod;
+                }
+            }
+            return res;
+        };
+        return dfs(dfs, n-1, 0, 0);
+    }
+};
+
+```
+
+这个题好好记下来吧！其实简化下来就是有点石头剪刀布的进阶版，就是给出了A的出招序列然后你求出b能获胜的序列数。这里灵神给出了很好的方法，让代码变得简单了很多，首先是将这三种招式变成了int型的三个数字，然后就是借用这个数字，和各种结局的特点给出了一行代码来代替大量的if else语句。然后就是如何思考这一个dp题，比赛的时候想到了两个参数，但是没有想到参数j来记录当前的得分，自己写的好歹还是能跑出来。。。只不过答案不对罢了哈哈哈。还有需要防止这个j下标的溢出，所以二级数组开辟的空间大小为2 * n+1。最后就是剪枝技巧，剪枝的步骤一定要在返回结果的前面！
+
+
+
+###  周赛420
+
+####  3324.出现在屏幕上的字符串序列(模拟)
+
+```cpp
+class Solution {
+public:
+    vector<string> stringSequence(string target) {
+        vector<string> ans;
+        string s;
+        for(char c : target) {
+            s += 'a';
+            for(int j = 'a'; j <= c; j++) {
+                s.back() = j;
+                ans.push_back(s);
+            }
+        }
+        return ans;
+    }
+};
+```
+
+自己写的时候是写了一个dfs哈哈哈，这才是纯暴力啊！模拟的方法还是学学吧~
+
+
+
+####  3326.使数组非递减的最少除法操作(预处理最小质因数)
+
+```cpp
+const int mx = 1e6+1;
+int f[mx];
+
+auto init = [] {
+    for(int i = 2; i < mx; i++) {
+        if(f[i] == 0) {
+            for(int j = i; j < mx; j += i) {
+                if(f[j] == 0) {
+                    f[j] = i;
+                }
+            }
+        }
+    }
+    return 0;
+}();
+
+
+
+class Solution {
+public:
+    int minOperations(vector<int>& nums) {
+        //预处理最小质因数 f[nums[i]]表示nums[i]的最小质因数
+
+
+        int ans = 0, n = nums.size();
+        for(int i = n-2; i >= 0; i--) {
+            if(nums[i] > nums[i+1]) {
+                nums[i] = f[nums[i]];
+                if(nums[i] > nums[i+1]) return -1;
+                ans++;
+            }
+        }
+        return ans;
+    }
+};
+```
+
+这一题也可以不用预处理，比赛时一直想不出怎么处理这个非递减的情况啊啊啊啊！原来就是从后往前遍历就行了，赛后就改了一下遍历顺序好写很多而且能过！我是直接暴力枚举的最小质因子的。这里就是对遍历方向的思考了。
+
+
+
 
 
 
@@ -2086,4 +2253,148 @@ void solve() {
 ```
 
 看完题解后发现很像枚举右、维护左的思想，关键就是在于优化这个平方的复杂度，考虑到每次ans累加的是r-l-1，所以就用了一个哈希数组和一个符合条件的和的数组来维护左边，这样就达到了On的做法的
+
+
+
+###  ABC372
+
+####  B.3^A次方(进制转换)
+
+```cpp
+void solve() {
+    int m;
+    cin >> m;
+    int i = 0;	//代表指数
+    vector<int> ans;
+    while(m) {
+        int k = m%3;	//求出的是系数
+        m /= 3;
+        while(k--) ans.push_back(i);	//存入系数个指数
+        i++;
+    }
+    cout << ans.size() << "\n";
+    for(auto& a : ans) cout << a << " ";
+    
+}
+```
+
+有一说一这一题是真不会，也算是查漏补缺了，这一题完全可以不局限于底数为3，其实底数可以是任意数，本质上这一题就是要写出转化进制的代码。不同的地方就在于这一题是要输出其指数，那么每次求得的系数之后都需要执行k次将指数i存入ans数组。一定要记住`模运算求得的k是系数，这里的i是当前的指数`
+
+
+
+####  C-Count ABC Again(枚举)
+
+```cpp
+void solve() {
+    int n, q;
+    cin >> n >> q;
+    string s;
+    cin >> s;
+    auto check = [&](int i) -> bool {
+        return s[i-1] == 'A' && s[i] == 'B' && s[i+1] == 'C';
+    };
+    int ans = 0;
+    for(int i = 1; i+1 < n; i++) ans += check(i);
+
+    while(q--) {
+        int idx;
+        char c;
+        cin >> idx >> c;
+        idx--;//对应下标
+        //减去修改前的个数
+        for(int i = max(idx-1, 1LL); i <= min(idx+1, n-2); i++) ans -= check(i);
+        s[idx] = c;
+        //加上修改后的个数
+        for(int i = max(idx-1, 1LL); i <= min(idx+1, n-2); i++) ans += check(i);
+        cout << ans << "\n";
+    }
+    
+}
+```
+
+两层for循环肯定是炸的，主要是考枚举的思路，修改idx的字符其实只需要枚举idx-1, idx, idx+1三个状态的ABC情况就行了，在这过程中容易出错的点就在于边界上，这一点弄清楚了就没问题了
+
+
+
+####  D-Buildings(单调栈)
+
+```cpp
+void solve() {
+    int n;
+    cin >> n;
+    vector<int> a(n+1), ans(n+1);
+    stack<int> st;
+    for(int i = 1; i <= n; i++) cin >> a[i];
+    for(int i = n; i >= 1; i--) {
+        ans[i] = st.size();
+        while(!st.empty() && st.top() <= a[i]) st.pop();
+        st.push(a[i]);
+    }
+    for(int i = 1; i <= n; i++) cout << ans[i] << " ";
+}
+```
+
+这个题读的真费劲，主要是需要能分析出这是个单调栈的题目，他这里说的下标i和j好像是一个左开右闭的一个区间(i, j]，整个意思可以转化成人在下标i往右看，能看到的建筑个数，所以这里需要用单调栈来维护一个从左往右递增的一个序列，维护的顺序是从后往前
+
+
+
+###  ABC371
+
+####  B-Taro
+
+```cpp
+void solve() {
+    int n, m;
+    cin >> n >> m;
+    unordered_map<int, pair<int, int>> hash;
+    while(m--) {
+        int a;
+        char b;
+        cin >> a >> b;
+        if(hash[a].first == 0 && b == 'M') cout << "Yes\n";
+        else cout << "No\n";
+        if(b == 'M') hash[a].first++;
+        else hash[a].second++;
+    }
+}
+```
+
+这一题也是在蓝桥遇到过类似的题，甚至感觉蓝桥的还稍微难点，这个给出的出生信息是按照时间排序的，其实就只需要一个bool数组就能达到效果，比赛的时候自己还没想出来，还是看的蓝桥的笔记写出来的
+
+
+
+####  C.1-D country(二分查找、前缀和)
+
+```cpp
+void solve() {
+    int n;
+    cin >> n;
+    vector<int> x(n+1), p(n+1);
+    for(int i = 1; i <= n; i++) cin >> x[i];
+    for(int i = 1; i <= n; i++) {
+        cin >> p[i];
+        p[i] += p[i-1];
+    }
+    //找到第一个大于等于target的下标
+    auto lowerBound = [&](int target) -> int {
+        int l = 0, r = n+1;
+        while(l+1 < r) {
+            int mid = l+(r-l)/2;
+            if(x[mid] >= target) r = mid;
+            else l = mid;
+        }
+        return r;
+    };
+    int q;
+    cin >> q;
+    while(q--) {
+        int L, R;
+        cin >> L >>R;
+        int l = lowerBound(L), r = lowerBound(R+1)-1;
+        cout << p[r]-p[l-1] << "\n";
+    }
+}
+```
+
+最开始看题感觉还挺简单，以为就是一个单纯的前缀和的题目，但是仔细看完题之后发现自己纯小丑啊！这个x不是连续的，突然就给整不会做了wtf。也是没有想到这一题竟然可以用二分来解，真是巧妙啊。题干给出的L和R，我们得找到这个区间内的村民数，但是这个x不是连续的，所以我们这里得用到二分的思想，就是找到第一个大于等于L和最后一个小于等于R的下标，找到一个大于等于L的下标还是好找，就是找最后一个小于等于R的下标不好找，需要转化成找第一个大于R的前一个下标 。这一题中这个下标变量之间的关系要弄清楚，感觉很巧妙！找到了坐标x对应的下标后就能求出对应的前缀和，然后就能求区间和，wc长见识了
 
