--- a/练习赛合集.md
+++ b/练习赛合集.md
@@ -2398,3 +2398,37 @@ void solve() {
 
 最开始看题感觉还挺简单，以为就是一个单纯的前缀和的题目，但是仔细看完题之后发现自己纯小丑啊！这个x不是连续的，突然就给整不会做了wtf。也是没有想到这一题竟然可以用二分来解，真是巧妙啊。题干给出的L和R，我们得找到这个区间内的村民数，但是这个x不是连续的，所以我们这里得用到二分的思想，就是找到第一个大于等于L和最后一个小于等于R的下标，找到一个大于等于L的下标还是好找，就是找最后一个小于等于R的下标不好找，需要转化成找第一个大于R的前一个下标 。这一题中这个下标变量之间的关系要弄清楚，感觉很巧妙！找到了坐标x对应的下标后就能求出对应的前缀和，然后就能求区间和，wc长见识了
 
+
+
+###  ABC.376
+
+####  E.	Max*Sum(优先队列)
+
+```cpp
+void solve() {
+    int n, k;
+    cin >> n >> k;
+    vector<pair<int, int>> a(n);
+    int sum = 0;
+    for(int i = 0; i < n; i++) cin >> a[i].first;
+    for(int i = 0; i < n; i++) cin >> a[i].second;
+    sort(a.begin(), a.end());
+    priority_queue<int> pq;
+    for(int i = 0; i+1 < k; i++) {
+        sum += a[i].second;
+        pq.push(a[i].second);
+    }
+    int ans = 1e18+1;
+    for(int i = k-1; i < n; i++) {
+        sum += a[i].second;
+        ans = min(ans, a[i].first*sum);
+        pq.push(a[i].second);
+        sum -= pq.top();
+        pq.pop();
+    }
+    cout << ans << "\n";
+}
+```
+
+没想到要用优先队列来解，看来优先队列的题得去学学了，看题的时候以为还是dp。题解的步骤是先将ai和bi放在pair里成对，然后先遍历前k-1一个元素用大根堆堆来维护bi，因为要求最小值，所以需要每次弹出最大值，所以用大根堆，这也达到了选子序列bi的效果，ai的话就是先排序，枚举最大i就行，感觉还是读题没读清楚，这个下标子集在ai和bi不是对应的，只是长度对应而已
+
