--- a/算法技巧及模板总结.md
+++ b/算法技巧及模板总结.md
@@ -840,6 +840,17 @@ void solve() {
 
 
 
+###  选或不选和枚举选哪个的抉择
+
+从当前这个数是否影响相邻几个数来思考：
+
+- 不考虑相邻元素，也就是选了nums[i]后i+1,i...的元素都不能选--->选或不选---2140.解决智力问题
+- 考虑相邻元素，也就是选了nums[i]后i+1,i...的元素还是能选--->枚举选哪个---2944.购买水果最少金币数
+
+当然也会有两种方法都适用的情况
+
+
+
 ###  背包问题
 
 ####  01背包
@@ -1366,6 +1377,8 @@ public:
 
 ##  并查集
 
+大致模板：
+
 ```cpp
 vector<int> uf(n);
 
@@ -1384,6 +1397,215 @@ for(auto ... : ...) {
     }
 }
 ```
+
+
+
+##  树状数组
+
+树状数组是什么？它是用来解决多次查询的前缀和数据结构，除此之外，在这期间还能对前缀和进行修改操作，这样是不是时间复杂度就大了很多？所以这里就用到了树状数组的一个数据结构来高效的维护对数组修改后的前缀和查询。树状数组的由来是线段树，看了俩小时没看懂线段树， 它好像是递归+二分的思维，但是代码量实在有点多看不下去了。。。
+
+###  单点修改、区间查询
+
+```cpp
+int nums[500005], tree[500005];
+int n, m;	//数组大小 查询长度
+
+//添加操作 不断向上维护tree
+void add(int idx, int val) {
+    while(idx <= n) {
+        tree[idx] += val;
+        idx += idx&-idx;	//累加lowbit
+    }
+}
+
+//求和操作 不断向下找区间和
+int getSum(int idx) {
+    int s = 0;
+    while(idx > 0) {
+        s += tree[idx];
+        idx -= idx&-idx;	//累减lowbit
+    }
+    return s;
+}
+
+void solve() {
+    
+    cin >> n >> m;
+    for(int i = 1; i <= n; i++) {
+        cin >> nums[i];
+        add(i, nums[i]);
+    }
+
+    while(m--) {
+        int a, b, c;
+        cin >> a >> b >> c;
+        if(a == 1) add(b, c);   //a是1的话执行add
+        else cout << getSum(c)-getSum(b-1) << "\n"; //a是2的话执行求和
+    }
+}
+```
+
+唯一需要注意的点就在于这里的nums和tree数组的下标都是从1开始的，如果要在力扣中用到这个板子就需要注意一下下标的问题(idx都需要偏移)
+
+
+
+###  区间修改、单点查询---当成差分用
+
+```cpp
+int nums[500005], tree[500005];
+int n, m;
+
+void add(int idx, int val) {
+    while(idx <= n) {
+        tree[idx] += val;
+        idx += idx&-idx;
+    }
+}
+
+int getSum(int idx) {
+    int s = 0;
+    while(idx > 0) {
+        s += tree[idx];
+        idx -= idx&-idx;
+    }
+    return s;
+}
+
+void solve() {
+    
+    cin >> n >> m;
+    for(int i = 1; i <= n; i++) {
+        cin >> nums[i];
+    }
+
+    while(m--) {
+        int a, b, c, d;
+        cin >> a;
+        if(a == 1) {
+            cin >> b >> c >> d;
+            add(b, d);
+            add(c+1, -d);
+        } else {
+            cin >> b;
+            cout << nums[b]+getSum(b) << endl;
+        }
+    }
+}
+```
+
+区间修改就相当于把这个树状数组当成了差分数组来做了
+
+
+
+##  线段树
+
+实现了区间修改和区间查询(洛谷3372)
+
+```cpp
+const int N=500005;
+
+#define lc p<<1
+#define rc p<<1|1
+
+int n, m, w[N];
+
+struct node {
+    int l, r, sum, add;  //左边界、右边界、区间和、懒标记
+}tree[4*N];
+
+//向上更新
+void pushUp(int p) {
+    tree[p].sum = tree[lc].sum+tree[rc].sum;
+}
+
+//向下更新
+void pushDown(int p) {
+    //当前节点没有懒标记就不需要向下更新
+    if(tree[p].add) {
+        tree[lc].sum += tree[p].add*(tree[lc].r-tree[lc].l+1);
+        tree[rc].sum += tree[p].add*(tree[rc].r-tree[rc].l+1);
+        tree[lc].add += tree[p].add;
+        tree[rc].add += tree[p].add;
+        tree[p].add = 0;    //父节点的懒标记向下更新完后要清零
+    }
+}
+
+//二分递归地建树 三个参数分别为 根节点1 左边界 右边界
+void build(int p, int l, int r) {
+    tree[p] = {l, r, w[l]}; //只有在l == r时是最终值 其余都会在回溯的时候修改
+    if(l == r) return;
+    int m = l+r>>1;
+    build(lc, l, m);
+    build(rc, m+1, r);
+    tree[p].sum = tree[lc].sum+tree[rc].sum;    //回溯
+}
+
+// //单点修改 参数分别为 根节点1 修改的位置 增加的值(注意是增加的值)
+// void update(int p, int x, int k) {
+//     //到达叶子节点
+//     if(tree[p].l == tree[p].r) {
+//         tree[p].sum += k;
+//         return;
+//     }
+//     int m = tree[p].l+(tree[p].r-tree[p].l)/2;
+//     if(x <= m) update(2*p, x, k);
+//     else update(2*p+1, x, k);
+//     tree[p].sum = tree[2*p].sum+tree[2*p+1].sum;    //回溯
+// }
+
+//区间查询 拆分与拼凑 覆盖就停止递归
+int query(int p, int x, int y) {
+    if(x <= tree[p].l && tree[p].r <= y) return tree[p].sum;
+    int m = tree[p].l+tree[p].r>>1;
+    pushDown(p);
+    int sum = 0;
+    if(x <= m) sum += query(lc, x, y);
+    if(y > m) sum += query(rc, x, y);
+    return sum;
+}
+
+//区间修改 参数：根节点 左边界 右边界 增加的值 有点类似于查询区间查询 覆盖了就停止递归
+void lazyUpdate(int p, int x, int y, int k) {
+    if(x <= tree[p].l && tree[p].r <= y) {
+        tree[p].sum += (tree[p].r-tree[p].l+1)*k;   //改变的值是区间宽度*k
+        tree[p].add += k;
+        return;
+    }
+    int m = tree[p].l+tree[p].r>>1;
+    pushDown(p);
+    if(x <= m) lazyUpdate(lc, x, y, k);
+    if(y > m) lazyUpdate(rc, x, y, k);
+    pushUp(p);
+}
+```
+
+主要思想是二分+分治+递归
+
+
+
+
+
+##  最小质因数预处理
+
+```cpp
+const int mx = 1e6+1;
+int f[mx];
+
+auto init = [] {
+    for(int i = 2; i < mx; i++) {
+        if(f[i] == 0) {
+            for(int j = i; j < mx; j += i) {
+                if(f[j] == 0) {
+                    f[j] = i;
+                }
+            }
+        }
+    }
+    return 0;
+}();
+```
+
+有点类似于筛指数，有点像但不完全是！
 
 
 
