--- a/算法技巧及模板总结.md
+++ b/算法技巧及模板总结.md
@@ -758,11 +758,10 @@ void solve() {
     int n;
     cin >> n;
     auto isprime = [&](int x) {
-        if(x < 2) return false;
         for(int i = 2; i*i <= x; i++) {
             if(x%i == 0) return false;
         }
-        return true;
+        return x >= 2;
     };
     //输出n以内的素数
     for(int i = 2; i <= n; i++) {
@@ -778,23 +777,21 @@ void solve() {
 **埃式筛**
 
 ```cpp
-void solve() {
-    int n;
-    cin >> n;
-    vector<bool> isPrime(n+1, true);
-    for(int i = 2; i <= n; i++) {
-        //是素数
-        if(prime[i]) {
-            for(int j = i*i; j <= n; j += i) {
-                prime[j] = false;
+const int N = 1000;
+vector<int> isPrime(N+1, true);
+vector<int> primes{0};  //防止二分查找下标溢出
+
+int init = []() -> int {
+    for(int i = 2; i <= N; i++) {
+        if(isPrime[i]) {
+            primes.push_back(i);
+            for(int j = i; j <= N/i; j++) {
+                isPrime[i*j] = false;
             }
         }
     }
-
-    for(int i = 2; i <= n; i++) {
-        if(prime[i]) cout << i << " ";
-    }
-}
+    return 0;
+}();
 ```
 
 先判断是否为素数，如果为素数那么再进行将后面的合数筛选掉
@@ -804,22 +801,20 @@ void solve() {
 **线性筛（欧拉筛）**
 
 ```cpp
-void solve() {
-    int n;
-    cin >> n;
-    vector<int> primes;
-    vector<bool> isPrime(n+1, true);
-    for(int i = 2; i <= n; i++) {
-        //是素数
+const int N = 1000;
+vector<int> isPrime(N+1, true);
+vector<int> primes{0};  //防止二分查找下标溢出
+
+int init = []() -> int {
+    for(int i = 2; i <= N; i++) {
         if(isPrime[i]) primes.push_back(i);
-        for(int j = 0; j < primes.size() && i*primes[j] <= n; j++) {
+        for(int j = 1; j < primes.size() && i*primes[j] <= N; j++) {
             isPrime[i*primes[j]] = false;
-            if(i%primes[j] == 0) break;	//以12为例 只能被6*2筛掉 而不能被4*3筛掉
+            if(i%primes[j] == 0) break;
         }
     }
-
-    for(auto p : primes) cout << p << " ";
-}
+    return 0;
+}();
 ```
 
 不同于埃式筛，这里是从最小质因数开始筛，因为埃式筛会有很多重复筛的地方，比如12和18，他们先后会被2和3筛，所以会有重复的地方，用线性筛就只会被2筛掉
@@ -1299,6 +1294,14 @@ void solve() {
 
 
 
+###  求x里有多少个1的api
+
+```cpp
+int cnt = __builtin_popcount(x);
+```
+
+
+
 
 
 
@@ -1537,7 +1540,7 @@ void build(int p, int l, int r) {
     int m = l+r>>1;
     build(lc, l, m);
     build(rc, m+1, r);
-    tree[p].sum = tree[lc].sum+tree[rc].sum;    //回溯
+    pushUp(p);
 }
 
 // //单点修改 参数分别为 根节点1 修改的位置 增加的值(注意是增加的值)
@@ -1588,13 +1591,13 @@ void lazyUpdate(int p, int x, int y, int k) {
 ##  最小质因数预处理
 
 ```cpp
-const int mx = 1e6+1;
-int f[mx];
+const int mx = 1e6;
+int f[mx+1];
 
-auto init = [] {
-    for(int i = 2; i < mx; i++) {
+int init = []() -> int {
+    for(int i = 2; i <= mx; i++) {
         if(f[i] == 0) {
-            for(int j = i; j < mx; j += i) {
+            for(int j = i; j <= mx; j += i) {
                 if(f[j] == 0) {
                     f[j] = i;
                 }
@@ -1606,6 +1609,29 @@ auto init = [] {
 ```
 
 有点类似于筛指数，有点像但不完全是！
+
+
+
+##  分解质因数
+
+```cpp
+void solve() {
+    int x;
+    cin >> x;
+    set<int> st;
+    for(int i = 2; i*i <= x; i++) {
+        while(x%i == 0) {
+            st.insert(i);
+            x /= i;
+        }
+    }
+    // 循环结束后，添加剩余的质因数  77末尾还要添加11
+    if(x > 1) st.insert(x);
+    for(auto& s : st) cout << s << " ";
+}
+```
+
+主要是不能忘了最后一步添加剩余的质因数
 
 
 
