--- a/算法技巧及模板总结.md
+++ b/算法技巧及模板总结.md
@@ -1500,6 +1500,46 @@ void solve() {
 
 
 
+###  适用于力扣的线段树类
+
+```cpp
+class FenwickTree {
+    vector<int> tree;
+
+public:
+    binaryIndexTree(int n) : tree(n) {}
+
+    void update(int i, int val) {
+        for(; i < tree.size(); i += i&-i) {
+            tree[i] += val;
+        }
+    }
+
+    int pre(int i) {
+        int s = 0;
+        for(; i > 0; i -= i&-i) {
+            s += tree[i];
+        }
+        return s;
+    }
+
+    int query(int l, int r) {
+        if(r < l) return 0;
+        return pre(r)-pre(l-1);
+    }
+};
+
+//应用示例
+int n = nums.size();
+FenwickTree f(...);	//大小肯定是跟n相关，加一或减一、或不变 因题而异
+f.update(...);
+f.query(...);
+```
+
+需要注意的就是下标问题，力扣的数组都是从0开始的，所以在传参的时候注意下标别弄错就行
+
+
+
 ##  线段树
 
 实现了区间修改和区间查询(洛谷3372)
